k8s/apps/nzbget.yaml
# at the moment nzbget runs externally
apiVersion: v1
kind: Namespace
metadata:
  name: nzbget
  labels:
    gateway.infra.services/allow-routes: "true"
---
apiVersion: v1
kind: Service
metadata:
    name: nzbget
    namespace: nzbget
spec:
    type: ClusterIP
    ports:
        - protocol: TCP
          appProtocol: http
          port: 80
          targetPort: 6789
          name: http
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
    name: nzbget-1
    namespace: nzbget
    labels:
        endpointslice.kubernetes.io/managed-by: flux
        kubernetes.io/service-name: nzbget
addressType: FQDN
ports:
    - appProtocol: http
      name: http
      protocol: TCP
      port: 6789
endpoints:
    - addresses:
        - "${core_tailscale_ip}"
      conditions:
        ready: true
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: allow-core-nzbget
    namespace: envoy-gateway-system
spec:
    egress:
        - toCIDR:
            - "${core_tailscale_ip}/32"
          toPorts:
            - ports:
                - port: "6789"
                  protocol: TCP
    endpointSelector:
        matchLabels:
            app.kubernetes.io/component: proxy
            app.kubernetes.io/managed-by: envoy-gateway
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: services
            gateway.envoyproxy.io/owning-gateway-namespace: infra
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: nzbget
    namespace: nzbget
    labels:
      external-dns: "true"
spec:
    parentRefs:
        - name: services
          namespace: infra
          sectionName: main
    hostnames:
        - nzbget.${services_hostname_suffix}
    rules:
        - backendRefs:
            - group: ""
              kind: Service
              name: nzbget
              port: 80
          matches:
            - path:
                type: PathPrefix
                value: /
